remove dead links for now

--- a/teams.html
+++ b/teams.html
@@ -42,7 +42,7 @@ permalink: /teams/
                   <!-- Leadership Pages -->
                   <!-- Team Leads -->
                   <li class="mix Leadership">
-                    <a href="#">
+                    <!-- <a href="#"> -->
                       <img src="{{ site.baseurl }}/img/teams/work3.jpg" alt="">
                       <div class="overly">
                         <div class="position-center">
@@ -54,7 +54,7 @@ permalink: /teams/
                   </li>
                   <!-- Meetings -->
                   <li class="mix Leadership">
-                    <a href="#">
+                    <!-- <a href="#"> -->
                     <img src="{{ site.baseurl }}/img/teams/meetings.jpg" alt="By Howard Chandler Christy - The Indian Reporter, Public Domain, https://commons.wikimedia.org/w/index.php?curid=662340">
                     <div class="overly">
                       <div class="position-center">
@@ -66,7 +66,7 @@ permalink: /teams/
                   </li>
                   <!-- Communication -->
                   <li class="mix Leadership">
-                    <a href="#">
+                    <!-- <a href="#"> -->
                     <img src="{{ site.baseurl }}/img/teams/communicate.gif" alt="https://www.buildabear.com/">
                     <div class="overly">
                       <div class="position-center">
@@ -78,7 +78,7 @@ permalink: /teams/
                   </li>
                   <!-- Management -->
                   <li class="mix Leadership">
-                    <a href="#">
+                    <!-- <a href="#"> -->
                     <img src="{{ site.baseurl }}/img/teams/motivation.gif" alt="https://www.reddit.com/r/gifs/comments/3abbzr/i_couldnt_find_one_of_these_so_i_made_one_instead/">
                     <div class="overly">
                       <div class="position-center">
@@ -91,7 +91,7 @@ permalink: /teams/
                   <!-- Aero Pages -->
                   <!-- Airfoil -->
                   <li class="mix Aerodynamics">
-                    <a href="#">
+                    <!-- <a href="#"> -->
                       <img src="{{ site.baseurl }}/img/teams/airfoildesign.png" alt="">
                       <div class="overly">
                         <div class="position-center">
@@ -103,7 +103,7 @@ permalink: /teams/
                   </li>
                   <!-- Wing Design -->
                   <li class="mix Aerodynamics">
-                    <a href="#">
+                    <!-- <a href="#"> -->
                       <img src="{{ site.baseurl }}/img/teams/wingdesign.png" alt="">
                       <div class="overly">
                         <div class="position-center">
@@ -115,7 +115,7 @@ permalink: /teams/
                   </li>
                   <!-- Stability Analysis -->
                   <li class="mix Aerodynamics">
-                    <a href="#">
+                    <!-- <a href="#"> -->
                       <img src="{{ site.baseurl }}/img/teams/stability.gif" alt="https://twitter.com/RGally29/status/1165075119959683074">
                       <div class="overly">
                         <div class="position-center">
@@ -127,7 +127,7 @@ permalink: /teams/
                   </li>
                   <!-- CFD -->
                   <li class="mix Aerodynamics">
-                    <a href="#">
+                    <!-- <a href="#"> -->
                       <img src="{{ site.baseurl }}/img/teams/cfd.gif" alt="">
                       <div class="overly">
                         <div class="position-center">
@@ -139,7 +139,7 @@ permalink: /teams/
                   </li>
                   <!-- Wind Tunnel Testing -->
                   <li class="mix Aerodynamics">
-                    <a href="#">
+                    <!-- <a href="#"> -->
                       <img src="{{ site.baseurl }}/img/teams/windtunnel.gif" alt="https://giphy.com/discoveryeurope/">
                       <div class="overly">
                         <div class="position-center">
@@ -152,7 +152,7 @@ permalink: /teams/
                   <!-- Graphics stuff -->
                   <!-- Parts -->
                   <li class="mix Graphics">
-                    <a href="#">
+                    <!-- <a href="#"> -->
                     <img src="{{ site.baseurl }}/img/teams/part.gif" alt="https://giphy.com/shesanportfolio">
                     <div class="overly">
                       <div class="position-center">
@@ -164,7 +164,7 @@ permalink: /teams/
                   </li>
                   <!-- Assemblies -->
                   <li class="mix Graphics">
-                    <a href="#">
+                    <!-- <a href="#"> -->
                     <img src="{{ site.baseurl }}/img/teams/assemblies.gif" alt="https://giphy.com/Spottimetta/">
                     <div class="overly">
                       <div class="position-center">
@@ -176,7 +176,7 @@ permalink: /teams/
                 </li>
                 <!-- Drawings -->
                 <li class="mix Graphics">
-                  <a href="#">
+                  <!-- <a href="#"> -->
                   <img src="{{ site.baseurl }}/img/teams/drawings.gif" alt="https://giphy.com/hateplow/">
                   <div class="overly">
                     <div class="position-center">
@@ -189,7 +189,7 @@ permalink: /teams/
                 <!-- Structures -->
                 <!-- FEA -->
                 <li class="mix Structures">
-                   <a href="#">
+                   <!-- <a href="#"> -->
                    <img src="{{ site.baseurl }}/img/teams/fea.gif" alt="http://user.engineering.uiowa.edu/~jialu/html/research.html">
                    <div class="overly">
                      <div class="position-center">
@@ -201,7 +201,7 @@ permalink: /teams/
                 </li>
                 <!-- Flutter -->
                 <li class="mix Structures">
-                  <a href="#">
+                  <!-- <a href="#"> -->
                   <img src="{{ site.baseurl }}/img/teams/flutter.gif" alt="https://www.reddit.com/r/gifs/comments/4ducxg/trippy_wobble_bridge/">
                   <div class="overly">
                     <div class="position-center">
@@ -213,7 +213,7 @@ permalink: /teams/
                 </li>
                 <!-- Testing -->
                 <li class="mix Structures">
-                  <a href="#">
+                  <!-- <a href="#"> -->
                   <img src="{{ site.baseurl }}/img/teams/structuretest.gif" alt="https://www.popularmechanics.com/flight/g2428/7-airplane-wing-stress-tests/">
                   <div class="overly">
                     <div class="position-center">
@@ -226,7 +226,7 @@ permalink: /teams/
                 <!-- Propulsion -->
                 <!-- Propellers -->
                 <li class="mix Propulsion">
-                  <a href="#">
+                  <!-- <a href="#"> -->
                   <img src="{{ site.baseurl }}/img/teams/propeller.gif" alt="https://giphy.com/usnationalarchives/">
                   <div class="overly">
                     <div class="position-center">
@@ -238,7 +238,7 @@ permalink: /teams/
                 </li>
                 <!-- Motors -->
                 <li class="mix Propulsion">
-                  <a href="#">
+                  <!-- <a href="#"> -->
                   <img src="{{ site.baseurl }}/img/teams/motor.gif" alt="https://imgur.com/gallery/AcCU6brmo">
                   <div class="overly">
                     <div class="position-center">
@@ -250,7 +250,7 @@ permalink: /teams/
                 </li>
                 <!-- Electronics -->
                 <li class="mix Propulsion">
-                  <a href="#">
+                  <!-- <a href="#"> -->
                   <img src="{{ site.baseurl }}/img/teams/electronics.gif" alt="https://giphy.com/xponentialdesign/">
                   <div class="overly">
                     <div class="position-center">
@@ -262,7 +262,7 @@ permalink: /teams/
                 </li>
                 <!-- Wind tunnel - 2 -->
                 <li class="mix Propulsion">
-                  <a href="#">
+                  <!-- <a href="#"> -->
                   <img src="{{ site.baseurl }}/img/teams/windtunnel2.gif" alt="">
                   <div class="overly">
                     <div class="position-center">
@@ -275,7 +275,7 @@ permalink: /teams/
                 <!-- Manufacturing -->
                 <!-- Prototyping -->
                 <li class="mix Manufacturing">
-                  <a href="#">
+                  <!-- <a href="#"> -->
                   <img src="{{ site.baseurl }}/img/teams/prototype.png" alt="">
                   <div class="overly">
                     <div class="position-center">
@@ -287,7 +287,7 @@ permalink: /teams/
                 </li>
                 <!-- Composites -->
                 <li class="mix Manufacturing">
-                  <a href="#">
+                  <!-- <a href="#"> -->
                   <img src="{{ site.baseurl }}/img/teams/composites.jpg" alt="https://www.blendernation.com/2020/04/26/procedural-carbon-fiber-in-blender-2-8/#prettyPhoto/0/">
                   <div class="overly">
                     <div class="position-center">
@@ -299,7 +299,7 @@ permalink: /teams/
                 </li>
                 <!-- CNC -->
                 <li class="mix Manufacturing">
-                  <a href="#">
+                  <!-- <a href="#"> -->
                   <img src="{{ site.baseurl }}/img/teams/cnc.gif" alt="https://giphy.com/TITANSofCNC/">
                   <div class="overly">
                     <div class="position-center">
@@ -311,7 +311,7 @@ permalink: /teams/
                 </li>
                 <!-- 3D printing -->
                 <li class="mix Manufacturing">
-                  <a href="#">
+                  <!-- <a href="#"> -->
                 <img src="{{ site.baseurl }}/img/teams/3dprint.gif" alt="https://giphy.com/banggood/">
                   <div class="overly">
                     <div class="position-center">
@@ -323,7 +323,7 @@ permalink: /teams/
                 </li>
                 <!-- Laser Cutting -->
                 <li class="mix Manufacturing">
-                  <a href="#">
+                  <!-- <a href="#"> -->
                   <img src="{{ site.baseurl }}/img/teams/lasercut.gif" alt="https://giphy.com/gifs/adweek-star-wars-kylo-ren-3ohze44HAxBtDMKfXa">
                   <div class="overly">
                     <div class="position-center">
@@ -336,7 +336,7 @@ permalink: /teams/
                 <!-- Systems -->
                 <!-- Design -->
                 <li class="mix Systems">
-                  <a href="#">
+                  <!-- <a href="#"> -->
                   <img src="{{ site.baseurl }}/img/teams/systems.gif" alt="https://history.nasa.gov/diagrams/ad004.gif">
                   <div class="overly">
                     <div class="position-center">
@@ -348,7 +348,7 @@ permalink: /teams/
                 </li>
                 <!-- Specialty -->
                 <li class="mix Systems">
-                  <a href="#">
+                  <!-- <a href="#"> -->
                   <img src="{{ site.baseurl }}/img/teams/specialty.gif" alt="https://www.reddit.com/r/oddlysatisfying/comments/442d68/b52_stratofortress_bomb_run/">
                   <div class="overly">
                     <div class="position-center">
@@ -361,7 +361,7 @@ permalink: /teams/
                 <!-- Piloting -->
                 <!-- Simulation -->
                 <li class="mix Piloting">
-                  <a href="#">
+                  <!-- <a href="#"> -->
                   <img src="{{ site.baseurl }}/img/teams/simulator.gif" alt="https://giphy.com/gifs/gamer-BfS4DLftk3dsY">
                   <div class="overly">
                     <div class="position-center">
@@ -373,7 +373,7 @@ permalink: /teams/
                 </li>
                 <!-- Testing -->
                 <li class="mix Piloting">
-                  <a href="#">
+                  <!-- <a href="#"> -->
                   <img src="{{ site.baseurl }}/img/teams/flighttest.gif" alt="https://giphy.com/mit/">
                   <div class="overly">
                     <div class="position-center">
@@ -385,7 +385,7 @@ permalink: /teams/
                 </li>
                 <!-- Fly off -->
                 <li class="mix Piloting">
-                  <a href="#">
+                  <!-- <a href="#"> -->
                   <img src="{{ site.baseurl }}/img/teams/flyoff.gif" alt="https://www.reddit.com/r/gifs/comments/1qrxus/f22_raptor_climb/">
                   <div class="overly">
                     <div class="position-center">
