try not doubling things up

--- a/members.html
+++ b/members.html
@@ -56,7 +56,7 @@ permalink: /members/
                 </a>
               </li>
               <!-- Team Lead -->
-              <li class="mix Leadership">
+              <li class="mix Leadership Aerodynamics">
               <!-- EMAIL IF TEAM LEAD -->
                 <a href="#">
                   <img src="{{ site.baseurl }}/img/blankperson.png" alt="">
@@ -175,23 +175,23 @@ permalink: /members/
                 </a>
               </li>
               <!-- Aero Pages -->
-              <!-- Team Lead -->
-              <li class="mix Aerodynamics">
+              Team Lead
+              <!-- <li class="mix Aerodynamics"> -->
               <!-- EMAIL IF TEAM LEAD -->
-                <a href="#">
-                  <img src="{{ site.baseurl }}/img/blankperson.png" alt="">
-                  <div class="overly">
-                    <div class="position-center">
+                <!-- <a href="#"> -->
+                  <!-- <img src="{{ site.baseurl }}/img/blankperson.png" alt=""> -->
+                  <!-- <div class="overly"> -->
+                    <!-- <div class="position-center"> -->
                       <!-- NAME -->
-                      <h2></h2>
+                      <!-- <h2></h2> -->
                       <!-- POSITION -->
-                      <p>Aerodynamics Lead</p>
+                      <!-- <p>Aerodynamics Lead</p> -->
                       <!-- YEAR -->
-                      <p></p>
-                    </div>
-                  </div>
-                </a>
-              </li>
+                      <!-- <p></p> -->
+                    <!-- </div> -->
+                  <!-- </div> -->
+                <!-- </a> -->
+              <!-- </li> -->
               <!-- Graphics stuff -->
               <!-- Team Lead -->
               <li class="mix Graphics">
