clean up the rest

--- a/members.html
+++ b/members.html
@@ -73,7 +73,7 @@ permalink: /members/
                 </a>
               </li>
               <!-- Team Lead -->
-              <li class="mix Leadership">
+              <li class="mix Leadership Graphics">
               <!-- EMAIL IF TEAM LEAD -->
                 <a href="#">
                   <img src="{{ site.baseurl }}/img/blankperson.png" alt="">
@@ -90,7 +90,7 @@ permalink: /members/
                 </a>
               </li>
               <!-- Team Lead -->
-              <li class="mix Leadership">
+              <li class="mix Leadership Structures">
               <!-- EMAIL IF TEAM LEAD -->
                 <a href="#">
                   <img src="{{ site.baseurl }}/img/blankperson.png" alt="">
@@ -107,7 +107,7 @@ permalink: /members/
                 </a>
               </li>
               <!-- Team Lead -->
-              <li class="mix Leadership">
+              <li class="mix Leadership Propulsion">
               <!-- EMAIL IF TEAM LEAD -->
                 <a href="#">
                   <img src="{{ site.baseurl }}/img/blankperson.png" alt="">
@@ -124,7 +124,7 @@ permalink: /members/
                 </a>
               </li>
               <!-- Team Lead -->
-              <li class="mix Leadership">
+              <li class="mix Leadership Manufacturing">
               <!-- EMAIL IF TEAM LEAD -->
                 <a href="#">
                   <img src="{{ site.baseurl }}/img/blankperson.png" alt="">
@@ -141,7 +141,7 @@ permalink: /members/
                 </a>
               </li>
               <!-- Team Lead -->
-              <li class="mix Leadership">
+              <li class="mix Leadership Systems">
               <!-- EMAIL IF TEAM LEAD -->
                 <a href="#">
                   <img src="{{ site.baseurl }}/img/blankperson.png" alt="">
@@ -158,7 +158,7 @@ permalink: /members/
                 </a>
               </li>
               <!-- Team Lead -->
-              <li class="mix Leadership">
+              <li class="mix Leadership Piloting">
               <!-- EMAIL IF TEAM LEAD -->
                 <a href="#">
                   <img src="{{ site.baseurl }}/img/blankperson.png" alt="">
@@ -174,132 +174,20 @@ permalink: /members/
                   </div>
                 </a>
               </li>
-              <!-- Aero Pages -->
-              Team Lead
-              <!-- <li class="mix Aerodynamics"> -->
-              <!-- EMAIL IF TEAM LEAD -->
-                <!-- <a href="#"> -->
-                  <!-- <img src="{{ site.baseurl }}/img/blankperson.png" alt=""> -->
-                  <!-- <div class="overly"> -->
-                    <!-- <div class="position-center"> -->
-                      <!-- NAME -->
-                      <!-- <h2></h2> -->
-                      <!-- POSITION -->
-                      <!-- <p>Aerodynamics Lead</p> -->
-                      <!-- YEAR -->
-                      <!-- <p></p> -->
-                    <!-- </div> -->
-                  <!-- </div> -->
-                <!-- </a> -->
-              <!-- </li> -->
-              <!-- Graphics stuff -->
-              <!-- Team Lead -->
-              <li class="mix Graphics">
-              <!-- EMAIL IF TEAM LEAD -->
-                <a href="#">
-                  <img src="{{ site.baseurl }}/img/blankperson.png" alt="">
-                  <div class="overly">
-                    <div class="position-center">
-                      <!-- NAME -->
-                      <h2></h2>
-                      <!-- POSITION -->
-                      <p>Graphics Lead</p>
-                      <!-- YEAR -->
-                      <p></p>
-                    </div>
-                  </div>
-                </a>
-              </li>
+              <!-- Aero -->
+
+              <!-- Graphics  -->
+
               <!-- Structures -->
-              <!-- Team Lead -->
-              <li class="mix Structures">
-                <!-- EMAIL IF TEAM LEAD -->
-                <a href="#">
-                  <img src="{{ site.baseurl }}/img/blankperson.png" alt="">
-                  <div class="overly">
-                    <div class="position-center">
-                      <!-- NAME -->
-                      <h2></h2>
-                      <!-- POSITION -->
-                      <p>Structures Lead</p>
-                      <!-- YEAR -->
-                      <p></p>
-                    </div>
-                  </div>
-                </a>
-              </li>
+
               <!-- Propulsion -->
-              <!-- Team Lead -->
-              <li class="mix Propulsion">
-              <!-- EMAIL IF TEAM LEAD -->
-                <a href="#">
-                  <img src="{{ site.baseurl }}/img/blankperson.png" alt="">
-                  <div class="overly">
-                    <div class="position-center">
-                      <!-- NAME -->
-                      <h2></h2>
-                      <!-- POSITION -->
-                      <p>Propulsion Lead</p>
-                      <!-- YEAR -->
-                      <p></p>
-                    </div>
-                  </div>
-                </a>
-              </li>
+
               <!-- Manufacturing -->
-              <!-- Team Lead -->
-              <li class="mix Manufacturing">
-                <!-- EMAIL IF TEAM LEAD -->
-                <a href="#">
-                  <img src="{{ site.baseurl }}/img/blankperson.png" alt="">
-                  <div class="overly">
-                    <div class="position-center">
-                      <!-- NAME -->
-                      <h2></h2>
-                      <!-- POSITION -->
-                      <p>Manufacturing Lead</p>
-                      <!-- YEAR -->
-                      <p></p>
-                    </div>
-                  </div>
-                </a>
-              </li>
+
               <!-- Systems -->
-              <!-- Team Lead -->
-              <li class="mix Systems">
-                  <!-- EMAIL IF TEAM LEAD -->
-                <a href="#">
-                  <img src="{{ site.baseurl }}/img/blankperson.png" alt="">
-                  <div class="overly">
-                    <div class="position-center">
-                      <!-- NAME -->
-                      <h2></h2>
-                      <!-- POSITION -->
-                      <p>Systems Lead</p>
-                      <!-- YEAR -->
-                      <p></p>
-                    </div>
-                  </div>
-                </a>
-              </li>
+
               <!-- Piloting -->
-              <!-- Team Lead -->
-              <li class="mix Piloting">
-                  <!-- EMAIL IF TEAM LEAD -->
-                <a href="#">
-                  <img src="{{ site.baseurl }}/img/blankperson.png" alt="">
-                  <div class="overly">
-                    <div class="position-center">
-                      <!-- NAME -->
-                      <h2></h2>
-                      <!-- POSITION -->
-                      <p>Piloting Lead</p>
-                      <!-- YEAR -->
-                      <p></p>
-                    </div>
-                  </div>
-                </a>
-              </li>
+
             </ul>
           </div>
         </div>
