remove empty links

--- a/members.html
+++ b/members.html
@@ -41,7 +41,7 @@ permalink: /members/
               <!-- Team Lead -->
               <li class="mix Leadership">
                 <!-- EMAIL IF TEAM LEAD -->
-                <a href="#">
+                <!-- <a href="#"> -->
                   <img src="{{ site.baseurl }}/img/blankperson.png" alt="">
                   <div class="overly">
                     <div class="position-center">
@@ -58,7 +58,7 @@ permalink: /members/
               <!-- Team Lead -->
               <li class="mix Leadership Aerodynamics">
               <!-- EMAIL IF TEAM LEAD -->
-                <a href="#">
+                <!-- <a href="#"> -->
                   <img src="{{ site.baseurl }}/img/blankperson.png" alt="">
                   <div class="overly">
                     <div class="position-center">
@@ -75,7 +75,7 @@ permalink: /members/
               <!-- Team Lead -->
               <li class="mix Leadership Graphics">
               <!-- EMAIL IF TEAM LEAD -->
-                <a href="#">
+                <!-- <a href="#"> -->
                   <img src="{{ site.baseurl }}/img/blankperson.png" alt="">
                   <div class="overly">
                     <div class="position-center">
@@ -92,7 +92,7 @@ permalink: /members/
               <!-- Team Lead -->
               <li class="mix Leadership Structures">
               <!-- EMAIL IF TEAM LEAD -->
-                <a href="#">
+                <!-- <a href="#"> -->
                   <img src="{{ site.baseurl }}/img/blankperson.png" alt="">
                   <div class="overly">
                     <div class="position-center">
@@ -109,7 +109,7 @@ permalink: /members/
               <!-- Team Lead -->
               <li class="mix Leadership Propulsion">
               <!-- EMAIL IF TEAM LEAD -->
-                <a href="#">
+                <!-- <a href="#"> -->
                   <img src="{{ site.baseurl }}/img/blankperson.png" alt="">
                   <div class="overly">
                     <div class="position-center">
@@ -126,7 +126,7 @@ permalink: /members/
               <!-- Team Lead -->
               <li class="mix Leadership Manufacturing">
               <!-- EMAIL IF TEAM LEAD -->
-                <a href="#">
+                <!-- <a href="#"> -->
                   <img src="{{ site.baseurl }}/img/blankperson.png" alt="">
                   <div class="overly">
                     <div class="position-center">
@@ -143,7 +143,7 @@ permalink: /members/
               <!-- Team Lead -->
               <li class="mix Leadership Systems">
               <!-- EMAIL IF TEAM LEAD -->
-                <a href="#">
+                <!-- <a href="#"> -->
                   <img src="{{ site.baseurl }}/img/blankperson.png" alt="">
                   <div class="overly">
                     <div class="position-center">
@@ -160,7 +160,7 @@ permalink: /members/
               <!-- Team Lead -->
               <li class="mix Leadership Piloting">
               <!-- EMAIL IF TEAM LEAD -->
-                <a href="#">
+                <!-- <a href="#"> -->
                   <img src="{{ site.baseurl }}/img/blankperson.png" alt="">
                   <div class="overly">
                     <div class="position-center">
