--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ permalink: /
   </div>
 </section>
 <!-- Wrapper Start -->
-<section id="intro">
+<section id="about">
   <div class="container">
     <div class="row">
       <div class="col-md-7 col-sm-12">
