--- a/index.html
+++ b/index.html
@@ -4,6 +4,19 @@ title: BYU DBF Team
 permalink: /
 ---
 
+<div class="banner">
+  <div class="banner__content">
+    <div class="banner__text">
+      Join us for our Kick-off Meeting <a href="https://calendar.google.com/calendar/render?action=TEMPLATE&dates=20210907T230000Z%2F20210908T000000Z&details=Kickoff%20Meeting%20for%20the%20BYU%20AIAA%20Design%20Build%20Fly%20Team.%20We%27ll%20talk%20about%20the%20team%20for%20new%20people%2C%20and%20start%20getting%20ourselves%20oriented%20and%20organized%20and%20ready%20for%20AIAA%20to%20release%20the%20rules%20for%20this%20year.&location=EB%20112%20%28Airplane%20Lab%29&text=BYU%20Design%20Build%20Fly%20Team%20Kickoff" target="_blank">5 PM on Tuesday, September 7th in room EB 112</a>
+    </div>
+    <button class="banner__close" type="button">
+      <span class="material-icons">
+        close
+      </span>
+    </button>
+  </div>
+</div>
+
 <!-- Slider Start -->
 <section id="slider">
   <div class="container">
@@ -13,7 +26,7 @@ permalink: /
           <h1 class="animated fadeInUp">BYU AERONAUTICS<br> DESIGN BUILD FLY TEAM</h1>
           <p class="animated fadeInUp">Check out what BYU's AIAA DBF competition team is up to.
               <br>We're always looking for new, talented team members.</p>
-          <a class="animated fadeInUpBig btn btn-default btn-wow" href="https://aeronautics.byu.edu/DBF/0001/01/01/apply.html#application-process">APPLY NOW</a>
+          <a class="animated fadeInUp btn btn-default btn-wow" href="https://aeronautics.byu.edu/DBF/0001/01/01/apply.html#application-process">APPLY NOW</a>
         </div>
       </div>
     </div>
