--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ permalink: /
           <h1 class="animated fadeInUp">BYU AERONAUTICS<br> DESIGN BUILD FLY TEAM</h1>
           <p class="animated fadeInUp">Check out what BYU's AIAA DBF competition team is up to.
               <br>We're always looking for new, talented team members.</p>
-          <a class="animated fadeInUp btn btn-default btn-wow" href="https://aeronautics.byu.edu/DBF/0001/01/01/apply.html#application-process">APPLY NOW</a>
+          <a class="animated fadeInUp btn btn-default btn-wow" href="https://aeronautics.byu.edu/DBF/0001/01/01/apply.html#application-process">MORE INFO</a>
         </div>
       </div>
     </div>
