update for new semester

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: BYU DBF Team
 permalink: /
 ---
 
-<div class="banner">
+<!-- <div class="banner">
   <div class="banner__content">
     <div class="banner__text">
       Join us for our Kick-off Meeting <a href="https://calendar.google.com/calendar/render?action=TEMPLATE&text=EveKickoff%20Meeting%20for%20the%20BYU%202021%20Design%20Build%20Fly%20Team&dates=20210901T240000Z/20210901T250000Z&details=Describe%20your%20event.We'll%20talk%20about%20the%20team%20for%20new%20people,%20and%20start%20getting%20ourselves%20oriented%20and%20organized%20for%20the%20AIAA%20to%20release%20the%20rules%20for%20this%20year.&location=EB%20112&trp=true" target="_blank">6 PM on Tuesday, September 7th in EB 112</a>
@@ -15,12 +15,12 @@ permalink: /
       </span>
     </button>
   </div>
-</div>
-<script>
+</div> -->
+<!-- <script>
   document.querySelector(".banner__close").addEventListener("click", function () {
   this.closest(".banner").style.display = "none";
 });
-</script>
+</script> -->
 
 <!-- Slider Start -->
 <section id="slider">
