update members and teams

--- a/members.html
+++ b/members.html
@@ -26,13 +26,13 @@ permalink: /members/
             <ul>
               <!-- Sub Teams -->
               <li class="filter" data-filter=".Leadership">Leadership</li>
-              <li class="filter" data-filter=".Aerodynamics">Aerodynamics</li>
-              <li class="filter" data-filter=".Graphics">Graphics</li>
-              <li class="filter" data-filter=".Structures">Structures</li>
-              <li class="filter" data-filter=".Propulsion">Propulsion</li>
-              <li class="filter" data-filter=".Manufacturing">Manufacturing</li>
-              <li class="filter" data-filter=".Systems">Systems</li>
-              <li class="filter" data-filter=".Piloting">Piloting</li>
+              <li class="filter" data-filter=".Aerostructures">Aerostructures</li>
+              <li class="filter" data-filter=".Graphics/Manufacturing">Graphics/Manufacturing</li>
+              <!-- <li class="filter" data-filter=".Structures">Structures</li> -->
+              <li class="filter" data-filter=".Piloting/Propulsion">Piloting/Propulsion</li>
+              <!-- <li class="filter" data-filter=".Manufacturing">Manufacturing</li> -->
+              <li class="filter" data-filter=".Payload Systems">Payload Systems</li>
+              <!-- <li class="filter" data-filter=".Piloting">Piloting</li> -->
             </ul>
           </div>
           <div class="portfolio-contant">
@@ -53,17 +53,34 @@ permalink: /members/
                       <p></p>
                     </div>
                   </div>
+                <!-- </a> -->
+              </li>
+              <!-- Team Lead -->
+              <li class="mix Leadership">
+                <!-- EMAIL IF TEAM LEAD -->
+                <a href="andrew.tagg57@gmail.com">
+                  <img src="{{ site.baseurl }}/img/blankperson.png" alt="">
+                  <div class="overly">
+                    <div class="position-center">
+                      <!-- NAME -->
+                      <h2>Andrew Tagg</h2>
+                      <!-- POSITION -->
+                      <p>Engineering Lead</p>
+                      <!-- YEAR -->
+                      <p></p>
+                    </div>
+                  </div>
                 </a>
               </li>
               <!-- Team Lead -->
               <li class="mix Leadership Aerodynamics">
               <!-- EMAIL IF TEAM LEAD -->
-                <!-- <a href="#"> -->
+                <a href="anderson.mark.az@gmail.com">
                   <img src="{{ site.baseurl }}/img/blankperson.png" alt="">
                   <div class="overly">
                     <div class="position-center">
                       <!-- NAME -->
-                      <h2></h2>
+                      <h2>Mark Anderson</h2>
                       <!-- POSITION -->
                       <p>Aerodynamics Lead</p>
                       <!-- YEAR -->
@@ -75,31 +92,14 @@ permalink: /members/
               <!-- Team Lead -->
               <li class="mix Leadership Graphics">
               <!-- EMAIL IF TEAM LEAD -->
-                <!-- <a href="#"> -->
+                <a href="ahcanes@gmail.com">
                   <img src="{{ site.baseurl }}/img/blankperson.png" alt="">
                   <div class="overly">
                     <div class="position-center">
                       <!-- NAME -->
-                      <h2></h2>
+                      <h2>Alex Hansen</h2>
                       <!-- POSITION -->
-                      <p>Graphics Lead</p>
-                      <!-- YEAR -->
-                      <p></p>
-                    </div>
-                  </div>
-                </a>
-              </li>
-              <!-- Team Lead -->
-              <li class="mix Leadership Structures">
-              <!-- EMAIL IF TEAM LEAD -->
-                <!-- <a href="#"> -->
-                  <img src="{{ site.baseurl }}/img/blankperson.png" alt="">
-                  <div class="overly">
-                    <div class="position-center">
-                      <!-- NAME -->
-                      <h2></h2>
-                      <!-- POSITION -->
-                      <p>Structures Lead</p>
+                      <p>Graphics/Manufacturing Lead</p>
                       <!-- YEAR -->
                       <p></p>
                     </div>
@@ -109,31 +109,14 @@ permalink: /members/
               <!-- Team Lead -->
               <li class="mix Leadership Propulsion">
               <!-- EMAIL IF TEAM LEAD -->
-                <!-- <a href="#"> -->
+                <a href="adbehale@gmail.com">
                   <img src="{{ site.baseurl }}/img/blankperson.png" alt="">
                   <div class="overly">
                     <div class="position-center">
                       <!-- NAME -->
-                      <h2></h2>
+                      <h2>Adam Hale</h2>
                       <!-- POSITION -->
-                      <p>Propulsion Lead</p>
-                      <!-- YEAR -->
-                      <p></p>
-                    </div>
-                  </div>
-                </a>
-              </li>
-              <!-- Team Lead -->
-              <li class="mix Leadership Manufacturing">
-              <!-- EMAIL IF TEAM LEAD -->
-                <!-- <a href="#"> -->
-                  <img src="{{ site.baseurl }}/img/blankperson.png" alt="">
-                  <div class="overly">
-                    <div class="position-center">
-                      <!-- NAME -->
-                      <h2></h2>
-                      <!-- POSITION -->
-                      <p>Manufacturing Lead</p>
+                      <p>Propulsion/Piloting Lead</p>
                       <!-- YEAR -->
                       <p></p>
                     </div>
@@ -150,24 +133,7 @@ permalink: /members/
                       <!-- NAME -->
                       <h2></h2>
                       <!-- POSITION -->
-                      <p>Systems Lead</p>
-                      <!-- YEAR -->
-                      <p></p>
-                    </div>
-                  </div>
-                </a>
-              </li>
-              <!-- Team Lead -->
-              <li class="mix Leadership Piloting">
-              <!-- EMAIL IF TEAM LEAD -->
-                <!-- <a href="#"> -->
-                  <img src="{{ site.baseurl }}/img/blankperson.png" alt="">
-                  <div class="overly">
-                    <div class="position-center">
-                      <!-- NAME -->
-                      <h2></h2>
-                      <!-- POSITION -->
-                      <p>Piloting Lead</p>
+                      <p>Payload Systems Lead</p>
                       <!-- YEAR -->
                       <p></p>
                     </div>
