--- a/teams.html
+++ b/teams.html
@@ -42,7 +42,7 @@ permalink: /teams/
                   <!-- Leadership Pages -->
                   <!-- Team Leads -->
                   <li class="mix Leadership">
-                    <!-- <a href="#"> -->
+                    <a href="https://aeronautics.byu.edu/DBF/members/">
                       <img src="{{ site.baseurl }}/img/teams/work3.jpg" alt="">
                       <div class="overly">
                         <div class="position-center">
