--- a/members.html
+++ b/members.html
@@ -58,7 +58,7 @@ permalink: /members/
               <!-- Team Lead -->
               <li class="mix Leadership">
                 <!-- EMAIL IF TEAM LEAD -->
-                <a href="andrew.tagg57@gmail.com">
+                <a href="mailto:andrew.tagg57@gmail.com">
                   <img src="{{ site.baseurl }}/img/blankperson.png" alt="">
                   <div class="overly">
                     <div class="position-center">
@@ -75,7 +75,7 @@ permalink: /members/
               <!-- Team Lead -->
               <li class="mix Leadership Aerodynamics">
               <!-- EMAIL IF TEAM LEAD -->
-                <a href="anderson.mark.az@gmail.com">
+                <a href="mailto:anderson.mark.az@gmail.com">
                   <img src="{{ site.baseurl }}/img/blankperson.png" alt="">
                   <div class="overly">
                     <div class="position-center">
@@ -92,7 +92,7 @@ permalink: /members/
               <!-- Team Lead -->
               <li class="mix Leadership Graphics">
               <!-- EMAIL IF TEAM LEAD -->
-                <a href="ahcanes@gmail.com">
+                <a href="mailto:ahcanes@gmail.com">
                   <img src="{{ site.baseurl }}/img/blankperson.png" alt="">
                   <div class="overly">
                     <div class="position-center">
@@ -109,7 +109,7 @@ permalink: /members/
               <!-- Team Lead -->
               <li class="mix Leadership Propulsion">
               <!-- EMAIL IF TEAM LEAD -->
-                <a href="adbehale@gmail.com">
+                <a href="mailto:adbehale@gmail.com">
                   <img src="{{ site.baseurl }}/img/blankperson.png" alt="">
                   <div class="overly">
                     <div class="position-center">
