fix links again

--- a/members.html
+++ b/members.html
@@ -73,7 +73,7 @@ permalink: /members/
                 </a>
               </li>
               <!-- Team Lead -->
-              <li class="mix Leadership Aerodynamics">
+              <li class="mix Leadership Aerostructures">
               <!-- EMAIL IF TEAM LEAD -->
                 <a href="mailto:anderson.mark.az@gmail.com">
                   <img src="{{ site.baseurl }}/img/blankperson.png" alt="">
@@ -82,7 +82,7 @@ permalink: /members/
                       <!-- NAME -->
                       <h2>Mark Anderson</h2>
                       <!-- POSITION -->
-                      <p>Aerodynamics Lead</p>
+                      <p>Aerostructures Lead</p>
                       <!-- YEAR -->
                       <p></p>
                     </div>
@@ -90,7 +90,7 @@ permalink: /members/
                 </a>
               </li>
               <!-- Team Lead -->
-              <li class="mix Leadership Graphics">
+              <li class="mix Leadership Graphics/Manufacturing">
               <!-- EMAIL IF TEAM LEAD -->
                 <a href="mailto:ahcanes@gmail.com">
                   <img src="{{ site.baseurl }}/img/blankperson.png" alt="">
@@ -107,7 +107,7 @@ permalink: /members/
                 </a>
               </li>
               <!-- Team Lead -->
-              <li class="mix Leadership Propulsion">
+              <li class="mix Leadership Propulsion/Piloting">
               <!-- EMAIL IF TEAM LEAD -->
                 <a href="mailto:adbehale@gmail.com">
                   <img src="{{ site.baseurl }}/img/blankperson.png" alt="">
@@ -124,7 +124,7 @@ permalink: /members/
                 </a>
               </li>
               <!-- Team Lead -->
-              <li class="mix Leadership Systems">
+              <li class="mix Leadership Payload Systems">
               <!-- EMAIL IF TEAM LEAD -->
                 <!-- <a href="#"> -->
                   <img src="{{ site.baseurl }}/img/blankperson.png" alt="">
